<resources>
    <string name="app_wanandroid">玩Android</string>
    <string name="project">项目</string>
    <string name="home">首页</string>
    <string name="collection">收藏</string>
    <string name="TODO">事务清单</string>
    <string name="news">每日资讯</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="hierarchy">知识体系</string>
    <string name="navigator">导航</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="h5_text">网页界面网页界面网页界面网页界面</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="share_view">share_view</string>
    <string name="hot_artist">热门歌手</string>
    <string name="see_all">更多</string>


    <string name="add_Person">添加成员</string>
</resources>
