<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/radio_group"
        android:background="@color/divider" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MainTabBottom"
            android:checked="true"
            android:drawableTop="@drawable/ic_tab_home_selector"
            android:text="@string/home" />
        <RadioButton
            android:id="@+id/rb_hierarchy"
            style="@style/MainTabBottom"
            android:drawableTop="@drawable/ic_tab_hierarchy_selector"
            android:text="@string/hierarchy" />

        <RelativeLayout
            android:id="@+id/layout_menu_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/ic_rest" />

        </RelativeLayout>

        <RadioButton
            android:id="@+id/rb_navigator"
            style="@style/MainTabBottom"
            android:drawableTop="@drawable/ic_tab_navigator_selector"
            android:text="@string/navigator" />
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/MainTabBottom"
            android:drawableTop="@drawable/ic_tab_project_selector"
            android:text="@string/project" />


    </RadioGroup>










</RelativeLayout>